# therapy-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker_build.sh  init_db.sql  pyproject.toml  requirements.txt
src/: main.py
therapy_backend/: db.py  main.py  model.py
therapy_backend/account/: model.py
therapy_backend/alembic/: env.py
therapy_backend/alembic/versions/: 718db9e98439_create_account_table.py
therapy_backend/api/: account.py
therapy_backend/core/: db.py
