[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "therapy_backend"
authors = [
    {name = "shawlynot"}
]
description = "Therapy backend"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "fastapi[standard]",
    "SQLAlchemy",
    "psycopg2-binary"
    ]
version="0.0.1"

[project.optional-dependencies]
dev = ["mypy", "alembic", "pytest", "pip-tools"]

[[tool.mypy.overrides]]
module = 'therapy_backend'